assets/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-2
  namespace: webassembly
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports: []
  selector:
    app: test-app-2
  sessionAffinity: None
  type: ClusterIP
  clusterIP: None
